apps/renovate/manifests/netpol.yaml
---
# yaml-language-server: $schema=https://kube-schemas.shold.io/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: renovate-operator
spec:
  endpointSelector:
    matchLabels:
      app: renovate-operator
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
          rules:
            http:
              - method: GET
                path: ^/metrics$
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy-gateway-system
            gateway.envoyproxy.io/owning-gateway-name: external-gateway
      toPorts:
        - ports:
            - port: "8081"
              protocol: TCP
            - port: "8082"
              protocol: TCP
---
# yaml-language-server: $schema=https://kube-schemas.shold.io/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: dragonfly
spec:
  endpointSelector:
    matchLabels:
      app: dragonfly
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: renovate
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
